Add bell animation

--- a/src/prompts/bell.scss
+++ b/src/prompts/bell.scss
@@ -24,6 +24,8 @@
 
     padding: 7px;
 
+    // Note the scale/width/height in all states have been chosen such that they resolve to whole numbers.
+    // This helps reduce blur of the SVG icon due to resterisation in Webkit.
     transform: scale(0.92);
 
     cursor: pointer;
@@ -48,7 +50,46 @@
         box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.54);
     }
 
+    animation: fade-in 0.2s ease-in;
+    backface-visibility: hidden;
+
     svg {
         fill: #fff;
+        animation: shake 0.4s cubic-bezier(.36, .07, .19, .97) both;
+        animation-delay: 0.3s;
+    }
+}
+
+@keyframes shake {
+
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-2px, 0, 0);
+    }
+
+    40%,
+    60% {
+        transform: translate3d(2px, 0, 0);
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
