--- a/src/prompts/bell.scss
+++ b/src/prompts/bell.scss
@@ -1,3 +1,8 @@
+$shadow-color: rgba(0, 0, 0, 0.54);
+$tooltip-background: #444;
+// https://easings.net/en#easeOutQuint
+$quintEasing: cubic-bezier(0.23, 1, 0.32, 1);
+
 .kumulos-prompt {
     box-sizing: border-box;
 
@@ -6,18 +11,32 @@
     *:after {
         box-sizing: inherit;
     }
+
+    z-index: 1000;
+}
+
+.kumulos-bell-container {
+    position: fixed;
+
+    &-bottom-left {
+        bottom: 15px;
+        left: 15px;
+    }
+
+    &-bottom-right {
+        bottom: 15px;
+        right: 15px;
+    }
 }
 
 .kumulos-bell {
-    position: fixed;
-    // https://easings.net/en#easeOutQuint
-    transition: transform 0.2s cubic-bezier(0.23, 1, 0.32, 1),
-        box-shadow 0.2s cubic-bezier(0.23, 1, 0.32, 1);
+    transition: transform 0.2s $quintEasing,
+        box-shadow 0.2s $quintEasing;
     will-change: transform, box-shadow, width, height;
 
     border-radius: 100%;
     background: rgb(76, 136, 224);
-    box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.54);
+    box-shadow: 1px 2px 2px 0 $shadow-color;
 
     width: 50px;
     height: 50px;
@@ -30,37 +49,88 @@
 
     cursor: pointer;
 
-    &-bottom-left {
-        bottom: 15px;
-        left: 15px;
-    }
-
-    &-bottom-right {
-        bottom: 15px;
-        right: 15px;
-    }
-
     &:hover {
         transform: scale(1);
-        box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.54);
+        box-shadow: 1px 2px 3px 1px $shadow-color;
     }
 
     &:active {
         transform: scale(0.86);
-        box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.54);
+        box-shadow: 1px 2px 2px 0 $shadow-color;
     }
 
-    animation: fade-in 0.2s ease-in;
+    animation: kumulos-anim-fade-in 0.2s ease-in;
     backface-visibility: hidden;
 
     svg {
         fill: #fff;
-        animation: shake 0.4s cubic-bezier(.36, .07, .19, .97) both;
+        animation: kumulos-anim-shake 0.4s cubic-bezier(.36, .07, .19, .97) both;
         animation-delay: 0.3s;
     }
 }
 
-@keyframes shake {
+.kumulos-bell-inner {
+    border-radius: 100%;
+}
+
+.kumulos-tooltip-parent {
+    .kumulos-tooltip {
+        display: none;
+    }
+
+    &:hover .kumulos-tooltip {
+        display: block;
+    }
+}
+
+.kumulos-tooltip {
+    background: $tooltip-background;
+    position: absolute;
+    top: 50%;
+    padding: 8px 12px;
+    font: 14px helvetica, sans-serif;
+    color: #eee;
+    border-radius: 6px;
+    white-space: nowrap;
+    z-index: 1100;
+    pointer-events: none;
+    transform: translateY(-50%);
+    will-change: opacity, transform;
+
+    &:after {
+        content: "";
+        width: 0;
+        height: 0;
+        position: absolute;
+        top: 50%;
+        right: 100%;
+        border: solid transparent;
+        border-width: 8px;
+        margin-top: -8px;
+    }
+
+    &-right {
+        left: calc(100% + 12px);
+        animation: kumulos-reveal-right 0.2s $quintEasing;
+
+        &:after {
+            border-right-color: $tooltip-background;
+            right: 100%;
+        }
+    }
+
+    &-left {
+        right: calc(100% + 12px);
+        animation: kumulos-reveal-left 0.2s $quintEasing;
+
+        &:after {
+            border-left-color: $tooltip-background;
+            left: 100%;
+        }
+    }
+}
+
+@keyframes kumulos-anim-shake {
 
     10%,
     90% {
@@ -84,12 +154,36 @@
     }
 }
 
-@keyframes fade-in {
+@keyframes kumulos-anim-fade-in {
     0% {
         opacity: 0;
     }
 
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes kumulos-reveal-left {
+    0% {
+        opacity: 0;
+        transform: translate(10px, -50%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0px, -50%);
+    }
+}
+
+@keyframes kumulos-reveal-right {
+    0% {
+        opacity: 0;
+        transform: translate(-10px, -50%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0px, -50%);
     }
 }
