--- a/src/prompts/bell.scss
+++ b/src/prompts/bell.scss
@@ -1,5 +1,5 @@
 $shadow-color: rgba(0, 0, 0, 0.54);
-$tooltip-background: #444;
+$tooltip-background: #222;
 // https://easings.net/en#easeOutQuint
 $quintEasing: cubic-bezier(0.23, 1, 0.32, 1);
 
@@ -35,17 +35,18 @@ $quintEasing: cubic-bezier(0.23, 1, 0.32, 1);
     will-change: transform, box-shadow, width, height;
 
     border-radius: 100%;
+    border-color: #fff;
     background: rgb(76, 136, 224);
     box-shadow: 1px 2px 2px 0 $shadow-color;
 
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
 
-    padding: 7px;
+    padding: 10px;
 
     // Note the scale/width/height in all states have been chosen such that they resolve to whole numbers.
     // This helps reduce blur of the SVG icon due to resterisation in Webkit.
-    transform: scale(0.92);
+    transform: scale(0.9);
 
     cursor: pointer;
 
@@ -55,7 +56,7 @@ $quintEasing: cubic-bezier(0.23, 1, 0.32, 1);
     }
 
     &:active {
-        transform: scale(0.86);
+        transform: scale(0.8);
         box-shadow: 1px 2px 2px 0 $shadow-color;
     }
 
@@ -66,6 +67,22 @@ $quintEasing: cubic-bezier(0.23, 1, 0.32, 1);
         fill: #fff;
         animation: kumulos-anim-shake 0.4s cubic-bezier(.36, .07, .19, .97) both;
         animation-delay: 0.3s;
+    }
+
+    &:before {
+        content: '';
+        display: block;
+        width: 85%;
+        height: 85%;
+        border: solid 1px;
+        border-radius: 100%;
+        ;
+        border-color: inherit;
+        ;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 7.5% 0 0 7.5%;
     }
 }
 
