--- a/src/prompts/bell.scss
+++ b/src/prompts/bell.scss
@@ -147,6 +147,7 @@ $quintEasing: cubic-bezier(0.23, 1, 0.32, 1);
     }
 }
 
+// Based on https://css-tricks.com/snippets/css/shake-css-keyframe-animation/
 @keyframes kumulos-anim-shake {
 
     10%,
