--- a/src/prompts/prompts.scss
+++ b/src/prompts/prompts.scss
@@ -1,8 +1,9 @@
-@import "./styles/variables";
-@import "./styles/anims";
-@import "./styles/tooltip";
-@import "./styles/toast";
-@import "./styles/prompts";
+@import './styles/variables';
+@import './styles/anims';
+@import './styles/tooltip';
+@import './styles/toast';
+@import './styles/prompts';
+@import './styles/buttons';
 
-@import "./bell/bell.scss";
-@import "./alert/alert.scss";
+@import './bell/bell.scss';
+@import './alert/alert.scss';
