--- a/src/prompts/alert/strip.scss
+++ b/src/prompts/alert/strip.scss
@@ -6,7 +6,7 @@
     left: 0;
 
     width: 100%;
-    height: 90px;
+    height: 80px;
 
     padding: 10px;
 
@@ -29,8 +29,9 @@
 }
 
 .kumulos-strip-icon {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
+    margin-top: 5px;
     margin-right: 20px;
 }
 
@@ -54,8 +55,10 @@
 .kumulos-strip-body {
     display: flex;
     flex-grow: 2;
-    align-items: center;
+    align-items: flex-start;
     font-size: $defaultBodySize;
+    overflow: hidden;
+    margin-top: 10px;
 }
 
 .kumulos-strip-actions {
