--- a/src/prompts/styles/_buttons.scss
+++ b/src/prompts/styles/_buttons.scss
@@ -7,7 +7,7 @@
     min-width: 100px;
 
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: $defaultButtonSize;
     font-weight: 600;
 
     &:hover {
