--- a/src/prompts/underlay.scss
+++ b/src/prompts/underlay.scss
@@ -1,3 +1,11 @@
+body.kumulos-underlay-blur {
+    overflow: hidden;
+}
+
+.kumulos-underlay-blur > *:not(.kumulos-prompt) {
+    filter: blur(3px);
+}
+
 .kumulos-prompt-underlay {
     position: fixed;
     top: 0;
