--- a/src/prompts/alert/banner.scss
+++ b/src/prompts/alert/banner.scss
@@ -1,4 +1,4 @@
-.kumulos-strip-container {
+.kumulos-banner-container {
     display: flex;
     flex-direction: row;
 
@@ -30,20 +30,20 @@
     }
 }
 
-.kumulos-strip-icon {
+.kumulos-banner-icon {
     width: 50px;
     height: 50px;
     margin-top: 5px;
     margin-right: 20px;
 }
 
-.kumulos-strip-content {
+.kumulos-banner-content {
     display: flex;
     flex-direction: column;
     flex: 1;
 }
 
-.kumulos-strip-header {
+.kumulos-banner-header {
     display: flex;
     font-size: $defaultHeaderFontSize;
 
@@ -54,7 +54,7 @@
     }
 }
 
-.kumulos-strip-body {
+.kumulos-banner-body {
     display: flex;
     flex-grow: 2;
     align-items: flex-start;
@@ -63,7 +63,7 @@
     margin-top: 10px;
 }
 
-.kumulos-strip-actions {
+.kumulos-banner-actions {
     display: flex;
     align-self: center;
     justify-self: flex-end;
