Lift center prompt little higher on page

--- a/src/prompts/alert/alert.scss
+++ b/src/prompts/alert/alert.scss
@@ -39,8 +39,7 @@
 
         &.kumulos-prompt-position-center {
             border-radius: 3px;
-            top: 50%;
-            transform: translate(0, -50%);
+            top: 120px;
         }
     }
 }
