Update styles to make z ordering more specfic

--- a/src/prompts/prompts.scss
+++ b/src/prompts/prompts.scss
@@ -8,3 +8,6 @@
 @import './bell/bell.scss';
 @import './dialog/alert.scss';
 @import './dialog/banner.scss';
+
+@import './background-mask.scss';
+@import './overlay.scss';
