--- a/src/prompts/styles/_variables.scss
+++ b/src/prompts/styles/_variables.scss
@@ -7,3 +7,6 @@ $defaultFont: helvetica, sans-serif;
 $defaultHeaderFontSize: 18px;
 $defaultBodySize: 14px;
 $defaultButtonSize: 14px;
+
+$maskZIndex: 900;
+$promptZIndex: 1000;
