--- a/src/prompts/background-mask.scss
+++ b/src/prompts/background-mask.scss
@@ -14,6 +14,8 @@ body.kumulos-background-mask-blur {
     height: 100%;
     width: 100%;
 
+    z-index: $maskZIndex;
+
     background-color: rgba(0, 0, 0, 0.3);
 
     display: block;
