Add banner and alert with mask prompts (#28)
* Use enum

* Support center alert positioning

* Add underlay mask support to prompt configuration

* Sync types as close to source as possible

* Add strip type prompt

* Reuse alert component for strip prompt

* Tweaks to font sizing and icon styles

* Add shadow to strip

* Remove import

* Uprev for release and create bundles

* Add blur to underlay

* Rename prompt type strip to banner

* Lift center prompt little higher on page

* Update bundles

* Ensure overlay is not affected by underlay mask

* Restore config strong typing and remove unused defs

* Restore test sig, fix label/color configs to be specific to prompt type

* Fix white border appearing on underlay caused by blurring actual underlay bg

* remove unnessesary border col from prompt styles

* Only show first underlay available from pending visible prompts

* Update after audit fix

* Update bundles

* Refactor use of underlay to a generic background mask

* Update bundle

* Rename Alert comp to Dialog

* Update bundle

* Chop colors from alert styles

* Remove background mask from base prompt config

* Maintain backwards compat for blur overlay css class

* Uprev to 1.7.0 and update bundles

* Update styles to make z ordering more specfic

* Handle edge case to ensure all prompts are hidden when cancelling native prompt

* Update bundle

Co-authored-by: Rob Dick <r.dick@kumulos.com>

--- a/src/prompts/prompts.scss
+++ b/src/prompts/prompts.scss
@@ -6,4 +6,8 @@
 @import './styles/buttons';
 
 @import './bell/bell.scss';
-@import './alert/alert.scss';
+@import './dialog/alert.scss';
+@import './dialog/banner.scss';
+
+@import './background-mask.scss';
+@import './overlay.scss';
