--- a/src/prompts/styles/_variables.scss
+++ b/src/prompts/styles/_variables.scss
@@ -4,3 +4,9 @@ $tooltip-background: #222;
 $quintEasing: cubic-bezier(0.23, 1, 0.32, 1);
 
 $defaultFont: helvetica, sans-serif;
+$defaultHeaderFontSize: 18px;
+$defaultBodySize: 14px;
+$defaultButtonSize: 14px;
+
+$maskZIndex: 900;
+$promptZIndex: 1000;
