Wire up display of channel selection dialog

--- a/src/prompts/prompts.scss
+++ b/src/prompts/prompts.scss
@@ -8,6 +8,7 @@
 @import './bell/bell.scss';
 @import './dialog/alert.scss';
 @import './dialog/banner.scss';
+@import './dialog/channels.scss';
 
 @import './background-mask.scss';
 @import './overlay.scss';
