--- a/src/prompts/prompts.scss
+++ b/src/prompts/prompts.scss
@@ -6,9 +6,8 @@
 @import './styles/buttons';
 
 @import './bell/bell.scss';
-@import './dialog/alert.scss';
 @import './dialog/banner.scss';
-@import './dialog/channels.scss';
+@import './dialog/dialog.scss';
 
 @import './background-mask.scss';
 @import './overlay.scss';
