Wire up channel list to dialogs

--- a/src/prompts/prompts.scss
+++ b/src/prompts/prompts.scss
@@ -4,6 +4,7 @@
 @import './styles/toast';
 @import './styles/prompts';
 @import './styles/buttons';
+@import './styles/checkbox';
 
 @import './bell/bell.scss';
 @import './dialog/banner.scss';
