--- a/src/prompts/dialog/banner.scss
+++ b/src/prompts/dialog/banner.scss
@@ -1,12 +1,13 @@
 .kumulos-banner-container {
     display: flex;
     flex-direction: row;
+    flex-flow: wrap;
 
     position: fixed;
     left: 0;
 
     width: 100%;
-    height: 80px;
+    min-height: 80px;
 
     padding: 10px;
 
@@ -24,6 +25,12 @@
     &.kumulos-prompt-position-bottom {
         bottom: 0;
         top: unset;
+    }
+}
+
+@media only screen and (min-device-width: 480px) {
+    .kumulos-banner-container {
+        flex-flow: initial;
     }
 }
 
@@ -64,4 +71,14 @@
     display: flex;
     align-self: center;
     justify-self: flex-end;
+    width: 100%;
+    justify-content: flex-end;
+    margin-top: 10px;
+}
+
+@media only screen and (min-device-width: 480px) {
+    .kumulos-banner-actions {
+        width: auto;
+        margin-top: 0;
+    }
 }
