--- a/src/prompts/prompts.scss
+++ b/src/prompts/prompts.scss
@@ -4,10 +4,11 @@
 @import './styles/toast';
 @import './styles/prompts';
 @import './styles/buttons';
+@import './styles/checkbox';
 
 @import './bell/bell.scss';
-@import './dialog/alert.scss';
 @import './dialog/banner.scss';
+@import './dialog/dialog.scss';
 
 @import './background-mask.scss';
 @import './overlay.scss';
