--- a/src/prompts/dialog/banner.scss
+++ b/src/prompts/dialog/banner.scss
@@ -53,12 +53,19 @@
 .kumulos-banner-header,
 .kumulos-ddlbanner-header {
     display: flex;
-    font-size: $defaultHeaderFontSize;
+    font-size: $defaultBannerHeaderFontSizeMobile;
 
     h1 {
         font-size: inherit;
-        font-weight: 400;
+        font-weight: bold;
         margin: 0;
+    }
+}
+
+@media only screen and (min-device-width: 480px) {
+    .kumulos-banner-header,
+    .kumulos-ddlbanner-header {
+        font-size: $defaultHeaderFontSize;
     }
 }
 
@@ -67,9 +74,20 @@
     display: flex;
     flex-grow: 2;
     align-items: flex-start;
-    font-size: $defaultBodySize;
+    font-size: $defaultBannerBodyFontSizeMobile;
     overflow: hidden;
     margin-top: 10px;
+}
+
+.kumulos-ddlbanner-body {
+    margin-top: 0;
+}
+
+@media only screen and (min-device-width: 480px) {
+    .kumulos-banner-body,
+    .kumulos-ddlbanner-body {
+        font-size: $defaultBodySize;
+    }
 }
 
 .kumulos-banner-actions,
@@ -82,6 +100,11 @@
     margin-top: 10px;
 }
 
+.kumulos-ddlbanner-actions {
+    width: auto;
+    margin-top: 0;
+}
+
 @media only screen and (min-device-width: 480px) {
     .kumulos-banner-actions {
         width: auto;
@@ -90,6 +113,7 @@
 }
 
 .kumulos-ddlbanner-close {
+    width: 30px;
 }
 
 .kumulos-ddlbanner-rating {
