--- a/src/prompts/styles/_variables.scss
+++ b/src/prompts/styles/_variables.scss
@@ -12,4 +12,7 @@ $maskZIndex: 900;
 $promptZIndex: 1000;
 
 $defaultBannerHeaderFontSizeMobile: 12px;
+$defaultBannerHeaderLineHeightMobile: 14px;
+
 $defaultBannerBodyFontSizeMobile: 12px;
+$defaultBannerBodyLineHeightMobile: 14px;
