--- a/src/prompts/styles/_anims.scss
+++ b/src/prompts/styles/_anims.scss
@@ -1,7 +1,5 @@
-
 // Based on https://css-tricks.com/snippets/css/shake-css-keyframe-animation/
 @keyframes kumulos-anim-shake {
-
     10%,
     90% {
         transform: translate3d(-1px, 0, 0);
@@ -67,5 +65,25 @@
     100% {
         opacity: 1;
         transform: translateY(-50%, 0, 0);
+    }
+}
+
+@keyframes kumulos-slide-down {
+    0% {
+        transform: translate3d(0, -100%, 0);
+    }
+
+    100% {
+        transform: translateY(0, 0, 0);
+    }
+}
+
+@keyframes kumulos-slide-up {
+    0% {
+        transform: translate3d(0, 100%, 0);
+    }
+
+    100% {
+        transform: translateY(0, 0, 0);
     }
 }
