--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,10 @@
 @import './prompts/styles/prompts';
 @import './prompts/styles/buttons';
 @import './prompts/styles/checkbox';
+@import './prompts/styles/banner';
+@import './prompts/styles/banner.compact';
 
 @import './prompts/bell/bell.scss';
-@import './prompts/dialog/banner.scss';
 @import './prompts/dialog/dialog.scss';
 
 @import './prompts/background-mask.scss';
