--- a/src/prompts/styles/_banner.compact.scss
+++ b/src/prompts/styles/_banner.compact.scss
@@ -1,14 +1,14 @@
 .kumulos-banner-compact {
-    & .kumulos-banner-body {
+    .kumulos-banner-body {
         margin-top: 0;
     }
 
-    & .kumulos-banner-actions {
+    .kumulos-banner-actions {
         width: auto;
         margin-top: 0;
     }
 
-    & .kumulos-banner-close {
+    .kumulos-banner-close {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -17,10 +17,28 @@
         margin-right: 10px;
     }
 
-    & .kumulos-banner-rating {
+    .kumulos-banner-rating {
         display: flex;
         height: 20px;
-        font-size: 38px;
-        color: rgba(128, 128, 0, 0.8);
+        font-size: 16px;
+        color: rgba(128, 128, 0, 1);
+        align-items: center;
+
+        .kumulos-banner-rating-star {
+            position: relative;
+
+            .kumulos-half {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 50%;
+                overflow: hidden;
+            }
+        }
+
+        .kumulos-banner-rating-count {
+            font-size: 12px;
+            margin-left: 3px;
+        }
     }
 }
