Add config driven color to rating stars component

--- a/src/components/app-rating/app-rating.scss
+++ b/src/components/app-rating/app-rating.scss
@@ -2,8 +2,8 @@
     display: flex;
     height: 20px;
     font-size: 16px;
-    color: rgba(128, 128, 0, 1);
     align-items: center;
+    margin-top: 3px;
 
     .kumulos-rating-star {
         position: relative;
