Add Deferred Deep Linking Web-to-App Banner (#33)
* add config definition for ddl banner

* tmp split out ddl banner component

* Ensure config validation accounts for feature driven initialisation

* Start segrating feature paths

* Create root frame to enable push/ddl manager split

* Independently initialise features

* Relocate ddl impl

* Relocate styles outside prompts realm

* Capture link in clipboard

* Split k root into sub containers for push / ddl

* Repeat use of platform config and context for icon url

* Move config into core and clear deck for unifying via single prompt manager

* Remove type

* Wrap DOM ready listenter around SDK main init

* Remove, dont need

* Relocate banner styles

* Uprev to 1.8.0

* Refactor / dry up prompt config

* Renaming

* Clean up ddl manager and config

* npm audit fix

* Remove unused, update type def

* Move ddl under prompts

* Split out prompt reminder impl

* cleanup

* Tidy up / remove dead code

* Split out event handling and prompt filtering

* Remove api payload mapping

* Update type name casing

* Move ddl feature check into browser compat check

* Relocate deferred prompt to prompt utils

* make Push feature default when no features specified

* Ensure features cant be []

Further enhacement chat in flight around supporting no features at all, e.g. to support sdk consumer A/B testing etc

* Adjust ddl config to remove nested named labels & colors

* Make public key non-nullable

* Swap out clipboard dep for smaller library

* Perform check for public key and throw if not present as this would seem a critial error in this context

* Reject promise if no public key is present

* Revert to making vapidPublicKey required

* Remove test/dev config

* Use glyph for close icon

* Move dom load handler

* Update bundles

* Remove debug logging

* Update bundles

* Update bundle

* Remove display of rating stars

* Updat

--- a/src/prompts/styles/_banner.scss
+++ b/src/prompts/styles/_banner.scss
@@ -13,18 +13,19 @@
 
     font-family: $defaultFont;
 
-    animation: kumulos-anim-fade-in 0.2s ease-in;
     backface-visibility: hidden;
 
     box-shadow: 0 0 3px 1px $shadow-color;
 
     &.kumulos-prompt-position-top {
         top: 0;
+        animation: kumulos-slide-down 0.4s ease;
     }
 
     &.kumulos-prompt-position-bottom {
         bottom: 0;
         top: unset;
+        animation: kumulos-slide-up 0.4s ease;
     }
 }
 
@@ -35,10 +36,9 @@
 }
 
 .kumulos-banner-icon {
-    width: 50px;
-    height: 50px;
-    margin-top: 5px;
-    margin-right: 20px;
+    width: 65px;
+    height: 65px;
+    margin-right: 10px;
 }
 
 .kumulos-banner-content {
@@ -49,12 +49,19 @@
 
 .kumulos-banner-header {
     display: flex;
-    font-size: $defaultHeaderFontSize;
+    font-size: $defaultBannerHeaderFontSizeMobile;
+    line-height: $defaultBannerBodyLineHeightMobile;
 
     h1 {
         font-size: inherit;
-        font-weight: 400;
-        margin: 0;
+        font-weight: bold;
+        margin: 0 0 3px 0;
+    }
+}
+
+@media only screen and (min-device-width: 480px) {
+    .kumulos-banner-header {
+        font-size: $defaultHeaderFontSize;
     }
 }
 
@@ -62,9 +69,16 @@
     display: flex;
     flex-grow: 2;
     align-items: flex-start;
-    font-size: $defaultBodySize;
+    font-size: $defaultBannerBodyFontSizeMobile;
+    line-height: $defaultBannerBodyLineHeightMobile;
     overflow: hidden;
     margin-top: 10px;
+}
+
+@media only screen and (min-device-width: 480px) {
+    .kumulos-banner-body {
+        font-size: $defaultBodySize;
+    }
 }
 
 .kumulos-banner-actions {
