--- a/src/prompts/styles/_variables.scss
+++ b/src/prompts/styles/_variables.scss
@@ -10,3 +10,9 @@ $defaultButtonSize: 14px;
 
 $maskZIndex: 900;
 $promptZIndex: 1000;
+
+$defaultBannerHeaderFontSizeMobile: 12px;
+$defaultBannerHeaderLineHeightMobile: 14px;
+
+$defaultBannerBodyFontSizeMobile: 12px;
+$defaultBannerBodyLineHeightMobile: 14px;
