--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import './prompts/styles/checkbox';
 @import './prompts/styles/banner';
 @import './prompts/styles/banner.compact';
+@import './prompts/styles/notch-support';
 
 @import './prompts/bell/bell.scss';
 @import './prompts/dialog/dialog.scss';
