Create and apply sass variable for banner padding

--- a/src/prompts/styles/_banner.scss
+++ b/src/prompts/styles/_banner.scss
@@ -9,7 +9,7 @@
     width: 100%;
     min-height: 80px;
 
-    padding: 10px;
+    padding: $defaultBannerPadding;
 
     font-family: $defaultFont;
 
