--- a/src/prompts/styles/_variables.scss
+++ b/src/prompts/styles/_variables.scss
@@ -16,3 +16,5 @@ $defaultBannerHeaderLineHeightMobile: 14px;
 
 $defaultBannerBodyFontSizeMobile: 12px;
 $defaultBannerBodyLineHeightMobile: 14px;
+
+$defaultBannerPadding: 10px;
