Implement rough spike around an inapp manager

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 
 @import './prompts/bell/bell.scss';
 @import './prompts/dialog/dialog.scss';
+@import './inapp/inapp.scss';
 
 @import './prompts/background-mask.scss';
 @import './prompts/overlay.scss';
