--- a/src/prompts/overlay.scss
+++ b/src/prompts/overlay.scss
@@ -1,8 +1,9 @@
-.kumulos-overlay-blur > *:not(.kumulos-overlay) {
+.kumulos-overlay-blur > *:not(.kumulos-overlay):not(.kumulos-silent-overlay) {
     filter: blur(3px);
 }
 
-.kumulos-overlay {
+.kumulos-overlay,
+.kumulos-silent-overlay {
     box-sizing: border-box;
 
     *,
@@ -74,6 +75,13 @@
         p {
             margin: 0.5em 0;
         }
+    }
+
+    .kumulos-silent-overlay-indicator {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
     }
 }
 
