Add overlay support for the 'quieter messaging' chrome permission prompt (#45)
* Add a check to determine whether the native push perms prompt is shown

* Implement new push manager state for blocked native prompt request

* Fix existing issue where channel prompt would show after declining push notifications

* [wip] Add overlay

* Extract overlay type components out of ui component

* Hide silent overlay on click

* Add def

* Add config for silent overlay

* [wip] Add svg indicator

* Add wip dynamic svg pointer indicator

* Adjust offset for pointer svg

* Update dist bundles and versioning in the package lock file

* Tidy pointer indicator impl, derive pointer arrow head from curve heading

* Update bundle

* Drop time to show silent overlay to 1 second

* use default font family var

* Rework dismissed overlay handling

* Update bundles

Co-authored-by: Rob Dick <r.dick@kumulos.com>

--- a/src/prompts/overlay.scss
+++ b/src/prompts/overlay.scss
@@ -1,8 +1,9 @@
-.kumulos-overlay-blur > *:not(.kumulos-overlay) {
+.kumulos-overlay-blur > *:not(.kumulos-overlay):not(.kumulos-silent-overlay) {
     filter: blur(3px);
 }
 
-.kumulos-overlay {
+.kumulos-overlay,
+.kumulos-silent-overlay {
     box-sizing: border-box;
 
     *,
@@ -31,7 +32,8 @@
         display: flex;
         max-width: 38%;
         padding: 1em;
-        font: 14px helvetica, sans-serif;
+        font-size: 14px;
+        font-family: $defaultFont;
 
         * {
             margin: 0;
@@ -74,6 +76,20 @@
         p {
             margin: 0.5em 0;
         }
+    }
+
+    .kumulos-silent-overlay-indicator {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+    }
+
+    .kumulos-silent-overlay-content-text {
+        max-width: 500px;
+        text-align: center;
+        font-size: 1.3em;
+        font-family: $defaultFont;
     }
 }
 
