show toast before redirecting to store

--- a/src/prompts/styles/_anims.scss
+++ b/src/prompts/styles/_anims.scss
@@ -64,7 +64,7 @@
 
     100% {
         opacity: 1;
-        transform: translateY(-50%, 0, 0);
+        transform: translate3d(-50%, 0, 0);
     }
 }
 
