--- a/src/prompts/styles/_anims.scss
+++ b/src/prompts/styles/_anims.scss
@@ -74,7 +74,7 @@
     }
 
     100% {
-        transform: translateY(0, 0, 0);
+        transform: translate3d(0, 0, 0);
     }
 }
 
@@ -84,6 +84,6 @@
     }
 
     100% {
-        transform: translateY(0, 0, 0);
+        transform: translate3d(0, 0, 0);
     }
 }
